# memento

./: .env.example  .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  updater.rs  ytdlp.rs
src/main/: index.ts
src/main/ipc/: download.ts  settings.ts
src/main/services/: ytdlp.ts
src/main/utils/: binary.ts
src/preload/: index.ts
src/renderer/: env.d.ts  index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/: DownloadQueue.tsx  UrlInput.tsx
src/renderer/src/contexts/: I18nContext.tsx
src/renderer/src/i18n/: translations.ts
src/renderer/src/lib/: analytics.ts
src/renderer/src/styles/: globals.css
