[package]
name = "memento"
version = "2.0.0"
description = "YouTube video downloader built with Tauri, React, HeroUI, and yt-dlp"
authors = ["Memento Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
regex = "1"
tokio = { version = "1", features = ["process", "io-util", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
